# wdotool

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  dist-workspace.toml  flake.nix
.github/workflows/: aur.yml  ci.yml  crates-io.yml  distros.yml  npm-publish.yml
docs/: capabilities-schema.json  testing.md  xdotool-compat.md
docs/design/: recorder-migration.md
docs/verification/: gnome-shell.md  kde-plasma-6.md
packaging/aur/: PKGBUILD
packaging/aur/wdotool/: PKGBUILD
packaging/aur/wdotool-bin/: PKGBUILD
packaging/aur/wdotool-git/: PKGBUILD
packaging/container/: Containerfile  README.md
packaging/flatpak/: README.md  io.github.cushycush.wdotool.desktop  io.github.cushycush.wdotool.metainfo.xml  io.github.cushycush.wdotool.yml
packaging/gnome-extension/wdotool@wdotool.github.io/: extension.js  metadata.json
packaging/npm/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
packaging/npm/scripts/: sync-schema.mjs
packaging/npm/src/: index.ts  schema.json  schema.ts  types.ts
packaging/npm/tests/: index.test.js
src/: cli.rs  error.rs  main.rs  types.rs
src/backend/: detector.rs  gnome.rs  kde.rs  libei.rs  mod.rs  stub.rs  uinput.rs  wlroots.rs
wdotool/: Cargo.toml
wdotool-core/: Cargo.toml
wdotool-core/src/: capabilities.rs  error.rs  keysym.rs  lib.rs  portal_token.rs  types.rs
wdotool-core/src/backend/: detector.rs  gnome.rs  kde.rs  libei.rs  mock.rs  mod.rs  uinput.rs  wlr_protocols.rs  wlroots.rs
wdotool-core/src/recorder/: evdev.rs  mapping.rs  mod.rs  portal.rs  simulated.rs  types.rs
wdotool-test-harness/: Cargo.toml
wdotool-test-harness/src/: lib.rs  main.rs
wdotool/src/: cli.rs  diag.rs  lib.rs  main.rs  record.rs  replay.rs
wdotool/tests/: cli_introspection.rs  cli_keyboard.rs  cli_pointer.rs  cli_replay.rs  cli_roundtrip.rs  cli_smoke.rs  cli_window.rs
wdotool/tests/common/: mod.rs
