[workspace]
resolver = "2"
members = ["wdotool-core", "wdotool"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cushycush/wdotool"
homepage = "https://github.com/cushycush/wdotool"
rust-version = "1.82"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
