[package]
name = "wdotool-test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wayland input observer + headless-compositor runner for wdotool integration tests. The library provides HeadlessSway (spawns sway --headless with a private XDG_RUNTIME_DIR + WAYLAND_DISPLAY) and an Observer handle to read input events. The bin (wdotool-observer) is the small Wayland client the runner spawns inside that compositor. Workspace-internal; not published."
publish = false

[lib]
name = "wdotool_test_harness"
path = "src/lib.rs"

[[bin]]
name = "wdotool-observer"
path = "src/bin/wdotool-observer.rs"

# The Wayland client (the bin) only makes sense on Linux. The runner
# (the lib) is also Linux-only because it spawns sway, but we keep the
# cfg attached to the deps so the workspace can build on other
# platforms without breaking; tests that use the runner skip
# themselves when sway isn't available.
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
xkbcommon = "0.9"
rustix = { version = "1", features = ["fs", "shm"] }
# For SIGTERM in Prime's Drop. Child::kill is SIGKILL which doesn't
# give wdotool a chance to release virtual devices cleanly.
libc = "0.2"

[dependencies]
tempfile = "3"
